--- a/hackers/allen_hsu/wk6d5/carousel/carousel.html
+++ b/hackers/allen_hsu/wk6d5/carousel/carousel.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Image Carousel</title>
+    <script src="js/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="css/carousel.css">
   </head>
   <body>
